--- a/css/app.css
+++ b/css/app.css
@@ -3447,9 +3447,10 @@ a {
 .quote-section {
   margin: 0 auto;
   width: 100%;
-  height: 40vh;
   background-color: #F3F3F3;
   padding: 3em 2em; }
+  .quote-section h2 {
+    font-family: 'Varela Round', sans-serif; }
 
 @media (max-width: 680px) {
   .quote-section {
@@ -4078,7 +4079,7 @@ Main components
 .projects-container {
   display: block;
   font-family: 'Varela Round', sans-serif;
-  background: #f7f7f7;
+  background: #f3f3f3;
   clear: both;
   height: auto;
   position: relative;
@@ -4086,6 +4087,7 @@ Main components
   .projects-container h2 {
     text-align: center;
     color: #4c077d;
+    font-family: 'Varela Round', sans-serif;
     margin-top: 1em;
     line-height: 2em;
     font-size: 2.2em;
