--- a/scss/app.scss
+++ b/scss/app.scss
@@ -177,10 +177,13 @@ a {
 .quote-section {
     margin: 0 auto;
     width: 100%;
-    height: 40vh;
     background-color: #F3F3F3;
     padding: 3em 2em;
-  
+
+    h2 {
+        font-family: 'Varela Round', sans-serif;
+    }
+
 }
 
 @media (max-width: 680px) {
@@ -210,8 +213,8 @@ a {
     position: absolute;
     left: 0;
     top: 20%;
-	margin: 0 0 40rem 0;
-	z-index:5;
+    margin: 0 0 40rem 0;
+    z-index: 5;
     width: 100%;
     text-align: center;
 }
@@ -222,8 +225,8 @@ a {
     font-weight: 700;
     letter-spacing: 0.015em;
     text-shadow: 2px 2px 0px #5B2782;
-	color: #ffffff;
-	font-family: 'Varela Round', sans-serif;
+    color: #ffffff;
+    font-family: 'Varela Round', sans-serif;
 }
 
 #intro h2 {
@@ -567,8 +570,8 @@ Modules - reusable parts of our design
             color: #f4f4f4;
             text-transform: none;
             font-weight: 600;
-			line-height: 2.5em;
-			font-family: 'Varela Round', sans-serif;
+            line-height: 2.5em;
+            font-family: 'Varela Round', sans-serif;
         }
     }
 }
@@ -732,7 +735,7 @@ Main components
     padding: 2em 0;
     margin-top: 0em;
     margin-bottom: 0em;
-    
+
 }
 
 #timeline::before {
@@ -1237,9 +1240,9 @@ Main components
 
 .projects-container {
     display: block;
-	//overflow: hidden;
-	font-family: 'Varela Round', sans-serif;
-    background: #f7f7f7;
+    //overflow: hidden;
+    font-family: 'Varela Round', sans-serif;
+    background: #f3f3f3;
     clear: both;
     height: auto;
     position: relative;
@@ -1248,7 +1251,8 @@ Main components
     & {
         h2 {
             text-align: center;
-			color: $purple;
+            color: $purple;
+            font-family: 'Varela Round', sans-serif;
             margin-top: 1em;
             line-height: 2em;
             font-size: 2.2em;
